data/derived/sp14/progs/unify/prog1817.ml.out
Characters 45-46:
  let fixpoint (f,b) = wwhile ( f, ( ( f b ) = b )),b;;
                                               ^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
